0.9613_1 2022-06-28
  [CHANGES]
  * The parent class must be a class type and non-pointer type.
  * The name of the parant class must be different from the name of the class.
  * The all super classes must be different from its own class. Recursive inheritance isn't allowed
  * Remove MANIFEST from .gitignore that is generated by spvmdist.
  [NON BACKWORD COMPATIBLE CHANGES]
  * Remove non-documented lib_link_abs from SPVM::Builder::Config.
  * native library is linked as relative path, not absolute pass by default.
0.9613 2022-06-27
  [CHANGE]
  * Fix descriptor error message.
  * Fields alignment size become the bigger byte size of sizeof(void*) and sizeof(int64_t).
  * Fields alignment rule become the same as C language.
  * Improve compilation error messages.
  * Add clear method to Point class.
  * Add Point3D class.
  * Add the inheritance feature.
    Add extends keyword.
    Add SUPER:: method call.
  [BUG FIX]
  * Fix the bug that the name of method call doesn't distinguish class methods and instance methods.
  [NON BACKWORD COMPATIBLE CHANGES]
  * Change the definitions of the following native API.
    [Beofre]
    int32_t (*check_runtime_assignability)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t cast_basic_type_id, int32_t cast_type_dimension, void* object);
    [After]
    int32_t (*isa)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t cast_basic_type_id, int32_t cast_type_dimension);
 
  * Change the definitions of the following native API.
    [Beofre]
    int32_t (*check_runtime_assignability_array_element)(SPVM_ENV* env, SPVM_VALUE* stack, void* array, void* element);
    [After]
    int32_t (*elem_isa)(SPVM_ENV* env, SPVM_VALUE* stack, void* array, void* element);

0.9612 2022-06-23
  [CHANGE]
  * set_error_code throw an exception when the value is not more than or equal to 1.
  * Add error operator to check the code of the excetpion
0.961101 2022-06-22
  [NON BACKWORD COMPATIBLE CHANGES]