@@ -4,6 +4,7 @@
   * The name of the parant class must be different from the name of the class.
   * The all super classes must be different from its own class. Recursive inheritance isn't allowed
   * Remove MANIFEST from .gitignore that is generated by spvmdist.
+  * lib_dirs of SPVM::Builder::Config is always added to link command.
   [NON BACKWORD COMPATIBLE CHANGES]
   * Remove non-documented lib_link_abs from SPVM::Builder::Config.
   * native library is linked as relative path, not absolute pass by default.
